Clean up a bit of the color wheel.

--- a/wheel-example.html
+++ b/wheel-example.html
@@ -9,22 +9,12 @@
             document.addEventListener("DOMContentLoaded", function()
             {
                 let wheel = new ColorWheel(
-                    new HSL(0, 1, 1)
+                    new HSL(0, 1, .5)
                 );
 
                 wheel.appendTo(document.body);
             });
         </script>
-        <style>
-            div
-            {
-                background: #333;
-                text-align: center;
-                font-size: 18pt;
-                font-weight: bold;
-                padding: 3px;
-            }
-        </style>
     </head>
     <body>
     </body>
