Update include paths

--- a/examples/color-wheel.html
+++ b/examples/color-wheel.html
@@ -3,8 +3,8 @@
     <head>
         <title>Colorizer Example</title>
         <script type="module">
-            import { ColorWheel } from "./src/scripts/ColorWheel.js";
-            import { HSL } from "./src/scripts/colors/HSL.js";
+            import { ColorWheel } from "../src/scripts/ColorWheel.js";
+            import { HSL } from "../src/scripts/colors/HSL.js";
 
             document.addEventListener("DOMContentLoaded", function()
             {
