--- a/examples/gradient.html
+++ b/examples/gradient.html
@@ -3,8 +3,8 @@
     <head>
         <title>Colorizer Example</title>
         <script type="module">
-            import { Colorizer } from "./src/scripts/Colorizer.js";
-            import { RGB } from "./src/scripts/colors/RGB.js";
+            import { Colorizer } from "../src/scripts/Colorizer.js";
+            import { RGB } from "../src/scripts/colors/RGB.js";
 
             document.addEventListener("DOMContentLoaded", function()
             {
