--- a/examples/color-wheel.html
+++ b/examples/color-wheel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Colorizer Example</title>
+        <title>Color Wheel Example</title>
         <script type="module">
             import { ColorWheel } from "../src/scripts/ColorWheel.js";
             import { HSL } from "../src/scripts/colors/HSL.js";
