--- a/examples/gradient.html
+++ b/examples/gradient.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Colorizer Example</title>
+        <meta charset="UTF-8" />
         <script type="module">
             import { Colorizer } from "../src/scripts/Colorizer.js";
             import { RGB } from "../src/scripts/colors/RGB.js";
