--- a/examples/color-wheel.html
+++ b/examples/color-wheel.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Color Wheel Example</title>
+        <meta charset="UTF-8" />
         <script type="module">
             import { ColorWheel } from "../src/scripts/ColorWheel.js";
             import { HSL } from "../src/scripts/colors/HSL.js";
